<resources>
    <string name="app_name">Bus Booking</string>
    <string name="home">Home</string>
    <string name="tickets">Tickets</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="todo2">TODO</string>
    <string name="where_to_board_from">Where to board from</string>
    <string name="destination">Destination</string>
    <string name="find_buses">Find Buses</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="welcome">Welcome!!</string>
    <string name="select_your_bus">Select your bus!</string>
    <string name="selected_date">Selected Date\n</string>
    <string name="select_date">Select Date</string>
    <string name="divider"><![CDATA[< — >]]></string>
    <string name="bus1">ABC Travels \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRs 600\nA/C Sleeper\n6:00PM - 3:00AM \t\t\t\t\t\t\t\t\t\t\t\t\t9h\n17 seats left</string>
    <string name="bus1_without_seats">ABC Travels \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRs 600\nA/C Sleeper\n6:00PM - 3:00AM \t\t\t\t\t\t\t\t\t\t\t\t\t9h</string>
    <string name="bus2">DEF Travels \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRs 900\nA/C Sleeper\n6:00PM - 3:00AM \t\t\t\t\t\t\t\t\t\t\t\t\t9h\n14 seats left</string>
    <string name="bus2_without_seats">DEF Travels \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRs 900\nA/C Sleeper\n6:00PM - 3:00AM \t\t\t\t\t\t\t\t\t\t\t\t\t9h</string>
    <string name="bus3">GHI Travels \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRs 750\nA/C Sleeper\n6:00PM - 3:00AM \t\t\t\t\t\t\t\t\t\t\t\t\t9h\n1 seat left</string>
    <string name="bus3_without_seats">GHI Travels \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRs 750\nA/C Sleeper\n6:00PM - 3:00AM \t\t\t\t\t\t\t\t\t\t\t\t\t9h</string>
    <string name="bus4">JKL Travels \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRs 900\nA/C Sleeper\n6:00PM - 3:00AM \t\t\t\t\t\t\t\t\t\t\t\t\t9h\n23 seats left</string>
    <string name="bus4_without_seats">JKL Travels \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tRs 900\nA/C Sleeper\n6:00PM - 3:00AM \t\t\t\t\t\t\t\t\t\t\t\t\t9h</string>
    <string name="go_back"><![CDATA[<]]></string>
    <string name="hello_world">Hello World</string>
    <string name="Booked">Booked</string>
    <string name="available">Available</string>
    <string name="selected">Your Seat</string>
    <string name="bus_rows">\t\t A \t\t\t\t\t\t B \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t C \t\t\t\t\t\t D</string>
    <string name="todo1">TODO</string>
    <string name="select_your_seat">Select your seat!</string>
    <string name="sleeper_t_tac">Sleeper\t,\tAC</string>
    <string name="traveller_information">Traveller Information</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="contact_information">Contact Information</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="e_mail">E-mail</string>
    <string name="payment_methods">Payment Methods :</string>
    <string name="netbanking">Netbanking</string>
    <string name="paytm_upi">Paytm UPI</string>
    <string name="credit_card">Credit Card</string>
    <string name="google_pay">Google Pay</string>
    <string name="proceed">Proceed</string>
    <string name="have_fun_on_your_journey">Have fun on your journey!!</string>
    <string name="continue1">Continue</string>
</resources>