<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/travels_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@color/fusion_red"/>
    <TableRow>
        <TextView
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:background="@color/fusion_red"
            android:gravity="right"
            android:text="@string/sleeper_t_tac"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/bus_time"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:background="@color/fusion_red"
            android:gravity="left"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />
    </TableRow>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fusion_red">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/traveller_information">
    </TextView>
    <EditText
        android:id="@+id/full_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:hint="@string/full_name" />
    <TableRow>
        <EditText
            android:id="@+id/age"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/age" />
        <EditText
            android:id="@+id/gender"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/gender" />
    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/contact_information"/>
    <EditText
        android:id="@+id/mobile"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:hint="@string/mobile_number" />
    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:hint="@string/e_mail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
    </TextView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="227dp"
        app:cardBackgroundColor="@color/fusion_red"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        android:buttonTint="@color/white"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/payment_methods" />

        <RadioGroup
            android:layout_marginTop="10dp"
            android:id="@+id/groupradio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleX="0.75"
            android:scaleY="0.75">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radia_id1"
                android:text="@string/netbanking"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/radia_id2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paytm_upi"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radia_id3"
                android:text="@string/credit_card"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radia_id4"
                android:text="@string/google_pay"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </RadioGroup>
    </androidx.cardview.widget.CardView>
    <GridLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/fusion_red"
            android:text="@string/proceed"
            android:textColor="@color/white" />
    </GridLayout>
</TableLayout>
