<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:scrollbarSize="10dp">
    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus1"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus2"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bus3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus3"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bus4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus4"
            android:padding="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            tools:ignore="RtlHardcoded" />
    </TableLayout>
</ScrollView>
