<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fusion_red"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    tools:ignore="Deprecated,ExtraText">

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/go_back"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/fusion_red"-->
<!--        android:gravity="left"-->
<!--        android:text="@string/go_back"-->
<!--        android:textSize="40sp"-->
<!--        tools:ignore="RtlHardcoded" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_your_bus"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recievedDestination"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/divider"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/recievedDestination2"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            tools:ignore="RtlHardcoded" />
    </TableRow>
    <TextView
        android:id="@+id/recievedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:gravity="center"/>
    <ImageView
        android:layout_width="88dp"
        android:layout_height="80dp"
        android:contentDescription="@string/todo2"
        android:layout_gravity="center"
        android:src="@drawable/bus_icon" />
</LinearLayout>
